moved sourcefiles to src-folder

--- a/gpgkeymgr/Makefile
+++ b/gpgkeymgr/Makefile
@@ -2,9 +2,9 @@ NAME	= gpgkeymgr
 #VERSION	= 0.4
 
 SHELL	:= /bin/bash
-SRC	= $(NAME).cpp vectorutil.cpp stringutil.cpp copyfile.cpp
+SRC	= src/$(NAME).cpp src/vectorutil.cpp src/stringutil.cpp src/copyfile.cpp
 BINDIR	= /usr/bin
-FLAGS	= -D_FILE_OFFSET_BITS=64 -DVERS=\"$(VERSION)\"
+FLAGS	= -D_FILE_OFFSET_BITS=64 #-DVERS=\"$(VERSION)\"
 LIBPATH	= -L/usr/include/ -L/usr/include/gpgme/ -L/usr/local/include/ -L/usr/include/gpgme/
 LIBS	= -lgpgme
 LOCAL	= /usr/share/locale/
